--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="web3_code.min.js"></script>
-    <script src="modal.min.js"></script>
+    <script src="modal.min.js"></script> 
+    <script src="firebase.js"></script>
 </body>
 
 </html>
